[tool.poetry]
name = "repair-tools"
version = "0.1.0"
description = ""
authors = ["Emilee Buytkins <emileebuytkins@nypl.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "^2.32.4"
pymediainfo = "^7.0.1"
msgpack = "^1.1.1"
tqdm = "^4.67.1"
boto3 = "^1.40.42"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
setuptools = "^80.1.0"

[tool.poetry.scripts]
delete_hidden_files = 'repair_tools.delete_hidden_files:main'
correct_double_bag = 'repair_tools.correct_double_bag:main'
compare_sources = 'repair_tools.compare_sources:main'
create_symlink = 'repair_tools.create_symlink:main'
prsv_move = 'repair_tools.prsv_move:main'
move_reingest = 'repair_tools.move_reingest:main'
download_sc = 'repair_tools.download_sc:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

